[package]
name = "llydnu-cli"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "llydnu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
llydnu = { path = "../llydnu" }
