[package]
name = "llydnu-lambda"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.6.0", features = ["full"] }

